# tarq

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/actions/build-and-test/: action.yml
.github/workflows/: check_cargo_version.sh  publish.yaml  test.yaml
src/: lib.rs  main.rs
tarq/: Cargo.toml
tarq/src/: main.rs
tarq/tests/: e2e_test.rs
tarq/tests/samples/unit/: index.js
tarq_core/: Cargo.toml
tarq_core/src/: lib.rs
tarq_core/tests/: integration_test.rs
