[package]
name = "rtok_ts-analyzer"
version = "0.1.2"
edition = "2024"
authors = ["Ryota Konabe <rt.konabe@gmail.com>"]
description = "Tool collecting code metrics for TypeScript"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
