[package]
name = "rtok_ts-analyzer"
version = "0.1.3"
edition = "2024"
authors = ["Ryota Konabe <rt.konabe@gmail.com>"]
description = "Tool collecting code metrics for TypeScript"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_ecma_ast = "14.0.0"
swc_ecma_parser = "21.0"
swc_common = "14.0.1"
wasm-bindgen = "0.2"
