[workspace]
resolver = "3"
members = ["tarq", "tarq_core"]

[workspace.package]
version = "0.1.0"
authors = ["Ryota Konabe <rt.konabe@gmail.com>"]
description = "Tool collecting code metrics for TypeScript"
repository = "https://github.com/konabe/tarq"
license = "MIT/Apache-2.0"
keywords = ["TypeScript", "Metrics"]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
tarq = { path = "./tarq" }
tarq_core = { path = "./tarq_core" }
