[package]
name = "tarq"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tarq_core = { version = "0.1", path = "../tarq_core" }
