[package]
name = "tarq_core"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_ecma_ast = "14.0.0"
swc_ecma_parser = "21.0"
swc_common = "14.0.1"
wasm-bindgen = "0.2"
